--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
     compile 'com.koushikdutta.ion:ion:2.1.6'
     compile 'com.google.guava:guava:18.0'
 
