--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,23 @@ android {
 }
 
 dependencies {
+    // google play services, for retrieving the GoogleAddId
     compile 'com.google.android.gms:play-services-ads:8.3.0'
+
+    // ion, used for HTTP communication
     compile 'com.koushikdutta.ion:ion:2.1.6'
+
+    // google guava, used for SHA1 calculation
     compile 'com.google.guava:guava:18.0'
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    // google support libraries
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+
+    // test dependencies
+    testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.0"
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.hamcrest:hamcrest-core:1.3'
+    testCompile 'org.springframework:spring-test:4.2.3.RELEASE'
 }
