--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		package="com.zlate87.fyberapp">
+					xmlns:tools="http://schemas.android.com/tools"
+					package="com.zlate87.fyberapp">
 
 	<application
-			android:allowBackup="true"
+			android:allowBackup="false"
 			android:name="com.zlate87.fyberapp.base.App"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/app_name"
 			android:supportsRtl="true"
-			android:theme="@style/AppTheme">
+			android:theme="@style/AppTheme"
+			tools:ignore="GoogleAppIndexingWarning">
 		<activity android:name="com.zlate87.fyberapp.feature.form.controller.FormActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
