--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,21 @@
-# Project-wide Gradle settings.
+# buildscript dependency  versions
+comAndroidToolsBuild_gradle=1.5.0
+comNeenbedanktGradlePlugins_androidApt=1.7
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+# compile, apt and provided dependency  versions
+comGoogleAndroidGms_playServicesAds=8.3.0
+comKoushikduttaIon_ion=2.1.6
+comGoogleGuava_guava=18.0
+comAndroidSupport=23.1.1
+comGoogleDagger=2.0.2
+orgGlassfish_javaxAnnotation=10.0-b28
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+# testCompile, androidTestCompile and androidTestApt dependency  versions
+junit_junit=4.12
+orgRobolectric_robolectric=3.0
+orgMockito_mockitoCore=1.10.19
+orgHamcrest_hamcrestCore=1.3
+orgSpringframework_springTest=4.2.3.RELEASE
+comAndroidSupportTest=0.4.1
+comAndroidSupportTestEspresso=2.2.1
+comGoogleDexmaker=1.2
